--- a/src/mibg3/Admin/HanteraAlienAdmin.form
+++ b/src/mibg3/Admin/HanteraAlienAdmin.form
@@ -86,8 +86,11 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Dialog" size="18" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="&#xc4;ndra information om aliens"/>
+        <Property name="text" type="java.lang.String" value="Alien information"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
