--- a/src/mibg3/Agent/AlienInfoAgent.form
+++ b/src/mibg3/Agent/AlienInfoAgent.form
@@ -2,7 +2,7 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -64,9 +64,13 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="returnAlienNuvPlatsLabel" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="rasLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="rasLabel1" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="returnArmBoogLabel" min="-2" pref="18" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
-                      <EmptySpace pref="36" max="32767" attributes="0"/>
+                      <EmptySpace pref="78" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Group type="102" alignment="1" attributes="0">
                               <Component id="ändraAgentField" max="32767" attributes="0"/>
@@ -182,8 +186,9 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="ändraRasAntalArmBoog" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="rasLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="returnArmBoogLabel" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="40" max="32767" attributes="0"/>
+              <EmptySpace pref="15" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -456,7 +461,20 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Antal Armar/Boogies (Endast vid rasbyte):"/>
+        <Property name="text" type="java.lang.String" value="Antal Armar/Boogies:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="returnArmBoogLabel">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Segoe UI" size="14" style="0"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="33" green="33" red="ff" type="rgb"/>
+        </Property>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="getArmBoog()" type="code"/>
+        </Property>
       </Properties>
     </Component>
   </SubComponents>
