--- a/src/mibg3/Agent/AlienInfoAgent.form
+++ b/src/mibg3/Agent/AlienInfoAgent.form
@@ -113,6 +113,9 @@
                       <Component id="alienLabel" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="alienValCB" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="taBortAlienKnapp" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="99" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -132,6 +135,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="alienLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="alienValCB" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="taBortAlienKnapp" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jSeparator1" min="-2" pref="10" max="-2" attributes="0"/>
@@ -189,7 +193,7 @@
                   <Component id="rasLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="returnArmBoogLabel" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="15" max="32767" attributes="0"/>
+              <EmptySpace pref="14" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -476,6 +480,11 @@
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection code="getArmBoog()" type="code"/>
         </Property>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="taBortAlienKnapp">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Ta bort alien"/>
       </Properties>
     </Component>
   </SubComponents>
