--- a/src/mibg3/Admin/ändraKC.form
+++ b/src/mibg3/Admin/ändraKC.form
@@ -2,7 +2,7 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -93,6 +93,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Bekr&#xe4;fta"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bekr&#xe4;ftaKnappActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
